--- a/requirements.txt
+++ b/requirements.txt
@@ -63,15 +63,15 @@ ipywidgets==8.0.4
 isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
-joblib==1.2.0
+joblib @ file:///tmp/build/80754af9/joblib_1635411271373/work
 jsonpatch @ file:///home/conda/feedstock_root/build_artifacts/jsonpatch_1632759296524/work
-jsonpointer==2.3
+jsonpointer==2.0
 jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1669810440410/work
 jupyter==1.0.0
 jupyter-console==6.6.3
 jupyter-events==0.6.3
 jupyter_client==8.0.3
-jupyter_core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1678994238709/work
+jupyter_core==5.2.0
 jupyter_server==2.4.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
@@ -94,7 +94,7 @@ mistune==2.0.5
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.9
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1679336765223/work
+nbformat==5.7.3
 nest-asyncio==1.5.6
 notebook==6.5.3
 notebook_shim==0.2.2
@@ -102,7 +102,7 @@ numba==0.56.4
 numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1660673193545/work
 oauthlib==3.2.2
 opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1681337016113/work
+packaging==23.0
 pandas==1.5.3
 pandocfilters==1.5.0
 parso==0.8.3
@@ -112,7 +112,7 @@ Pillow==9.4.0
 pipeline==0.1.0
 pipenv==2023.3.20
 pkgutil_resolve_name @ file:///home/conda/feedstock_root/build_artifacts/pkgutil-resolve-name_1633981968097/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1679871349196/work
+platformdirs==3.1.1
 plotly==5.13.1
 pluggy @ file:///home/conda/feedstock_root/build_artifacts/pluggy_1667232663820/work
 pooch @ file:///tmp/build/80754af9/pooch_1623324770023/work
@@ -150,7 +150,7 @@ rich==13.3.4
 rsa==4.9
 ruamel.yaml @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml_1666827372049/work
 ruamel.yaml.clib @ file:///Users/runner/miniforge3/conda-bld/ruamel.yaml.clib_1670412881259/work
-scikit-learn==1.2.2
+scikit-learn @ file:///Users/ktietz/ci_310/scikit-learn_1644264513665/work
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.0
@@ -171,7 +171,7 @@ tensorflow-macos==2.9.0
 tensorflow-metal==0.5.0
 termcolor==2.2.0
 terminado==0.17.1
-threadpoolctl==3.1.0
+threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
 tinycss2==1.2.1
 toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
 toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1657485559105/work
